fix styling gap

--- a/src/components/Gallery/Card.css
+++ b/src/components/Gallery/Card.css
@@ -1,4 +1,5 @@
 .card {
+    margin-bottom: 30px;
     position: relative;
     width: 100%;
     height: auto;
